// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots actionBar locked visible 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-17wxsht"
  >
    <div
      className="css-js3ti3"
    >
      <div
        className="css-1wgk747"
      />
    </div>
    <div
      className="css-kxulf3"
    >
      <div
        className="css-1e23mlv"
      >
        Amazingly, the Longest Title in the World Because It's Known That If You Give Room For This Kind of a Title, It Will Definitely Come to Pass 2000
      </div>
    </div>
    <div
      className="css-2c174p"
    >
      <button
        className="css-1ekywde"
      >
        <div
          className="css-otejxm"
        >
          <svg
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M17.5012 2H9C6.794 2 5 3.795 5 6v17l5.5-6 5.5 6V10h4c.552 0 1-.447 1-1V6c0-2.205-1.2918-4-3.4988-4zM14 6v12l-3.5-4L7 18V6c0-1.104.897-2 2-2h5.536c-.34.589-.536 1.272-.536 2zm5 2h-3V6c0-1.104.3982-2 1.5012-2C18.6032 4 19 4.896 19 6v2z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots actionBar long title 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-17wxsht"
  >
    <div
      className="css-1tiyrld"
    >
      <div
        className="css-1e23mlv"
      >
        Amazingly, the Longest Title in the World Because It's Known That If You Give Room For This Kind of a Title, It Will Definitely Come to Pass 2000
      </div>
    </div>
    <div
      className="css-48z861"
    >
      <button
        className="css-1ekywde"
      >
        <div
          className="css-otejxm"
        >
          <svg
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M17.5012 2H9C6.794 2 5 3.795 5 6v17l5.5-6 5.5 6V10h4c.552 0 1-.447 1-1V6c0-2.205-1.2918-4-3.4988-4zM14 6v12l-3.5-4L7 18V6c0-1.104.897-2 2-2h5.536c-.34.589-.536 1.272-.536 2zm5 2h-3V6c0-1.104.3982-2 1.5012-2C18.6032 4 19 4.896 19 6v2z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots actionBar long title with image 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-17wxsht"
  >
    <div
      className="css-js3ti3"
    >
      <div
        className="css-1wgk747"
      />
    </div>
    <div
      className="css-kxulf3"
    >
      <div
        className="css-1e23mlv"
      >
        Amazingly, the Longest Title in the World Because It's Known That If You Give Room For This Kind of a Title, It Will Definitely Come to Pass 2000
      </div>
    </div>
    <div
      className="css-48z861"
    >
      <button
        className="css-1ekywde"
      >
        <div
          className="css-otejxm"
        >
          <svg
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M17.5012 2H9C6.794 2 5 3.795 5 6v17l5.5-6 5.5 6V10h4c.552 0 1-.447 1-1V6c0-2.205-1.2918-4-3.4988-4zM14 6v12l-3.5-4L7 18V6c0-1.104.897-2 2-2h5.536c-.34.589-.536 1.272-.536 2zm5 2h-3V6c0-1.104.3982-2 1.5012-2C18.6032 4 19 4.896 19 6v2z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots actionBar one action 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-17wxsht"
  >
    <div
      className="css-1tiyrld"
    >
      <div
        className="css-1e23mlv"
      >
        Ready, Action, Bar!
      </div>
    </div>
    <div
      className="css-48z861"
    >
      <button
        className="css-1ekywde"
      >
        <div
          className="css-otejxm"
        >
          <svg
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M17.5012 2H9C6.794 2 5 3.795 5 6v17l5.5-6 5.5 6V10h4c.552 0 1-.447 1-1V6c0-2.205-1.2918-4-3.4988-4zM14 6v12l-3.5-4L7 18V6c0-1.104.897-2 2-2h5.536c-.34.589-.536 1.272-.536 2zm5 2h-3V6c0-1.104.3982-2 1.5012-2C18.6032 4 19 4.896 19 6v2z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots combo everything 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-17wxsht"
  >
    <div
      className="css-js3ti3"
    >
      <span
        className="css-15yq56v"
      >
        <a
          href="http://google.com?query=image"
        >
          <div
            className="css-1wgk747"
          />
        </a>
      </span>
      <div
        className="css-10pysoa"
      >
        <span
          className="css-1fxa3fl"
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <a
            href="http://google.com?query=overlay"
          >
            <div
              className="css-195ztb"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 2c5.52 0 10 4.48 10 10s-4.48 10-10 10S2 17.52 2 12 6.48 2 12 2zm0 18c4.41 0 8-3.59 8-8s-3.59-8-8-8-8 3.59-8 8 3.59 8 8 8zm-2-4V8l6 4-6 4z"
                />
              </svg>
            </div>
          </a>
        </span>
      </div>
    </div>
    <div
      className="css-l77jv6"
    >
      <div
        className="css-1e23mlv"
      >
        <span
          className="css-1ublh7e"
        >
          <a
            href="http://google.com?query=title"
          >
            Image, Progress, Link Full Overlay, Icon, Link Title, Link Meta1, 2, Action Bar, and More Really. Why Not Put More In? Release a New Edition Every Year With All the Excesses of our VC Budget? Boundless Features Will Be Yours 2000
          </a>
        </span>
      </div>
      <div
        className="css-gmo5z6"
      >
        <span
          className="css-1tz10dh"
        >
          <span
            className="css-1ublh7e"
          >
            <a
              href="http://google.com/?query=jaketrent"
            >
              It is impossible to count the grand contributions of this great author
            </a>
          </span>
        </span>
        <span
          aria-hidden={true}
          className="css-kykfz1"
        >
          ·
        </span>
        <span
          className="css-1tz10dh"
        >
          <span
            className="css-1ublh7e"
          >
            <a
              href="http://google.com/?query=jaketrent"
            >
              Levels heretofore unknown in the battle for truth and knowledge
            </a>
          </span>
        </span>
        <span
          aria-hidden={true}
          className="css-kykfz1"
        >
          ·
        </span>
        <span
          className="css-1tz10dh"
        >
          <span
            className="css-1ublh7e"
          >
            <a
              href="http://google.com/?query=jaketrent"
            >
              A length of such amazing lengthitude so-as to blow the mind
            </a>
          </span>
        </span>
      </div>
      <div
        className="css-gmo5z6"
      >
        <span
          className="css-1tz10dh"
        >
          Goodness me!
        </span>
      </div>
    </div>
    <div
      className="css-h4r20u"
    >
      <button
        className="css-1ekywde"
      >
        <div
          className="css-otejxm"
        >
          <svg
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M17.5012 2H9C6.794 2 5 3.795 5 6v17l5.5-6 5.5 6V10h4c.552 0 1-.447 1-1V6c0-2.205-1.2918-4-3.4988-4zM14 6v12l-3.5-4L7 18V6c0-1.104.897-2 2-2h5.536c-.34.589-.536 1.272-.536 2zm5 2h-3V6c0-1.104.3982-2 1.5012-2C18.6032 4 19 4.896 19 6v2z"
            />
          </svg>
        </div>
      </button>
      <button
        className="css-1ekywde"
      >
        <div
          className="css-otejxm"
        >
          <svg
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13 6.083V4h-2v2.083c-1.45.2432-2.7237 1.0066-3.6226 2.0917L5.5734 7.133l-1 1.7322 1.8022 1.0405C6.1326 10.5577 6 11.2634 6 12c0 .736.1325 1.441.375 2.0924L4.5722 15.133l1 1.7322 1.8038-1.0414c.899 1.086 2.1733 1.85 3.624 2.0932V20h2v-2.083c1.451-.2434 2.7255-1.0077 3.6246-2.094l1.805 1.0422 1-1.732-1.8042-1.0418C17.8676 13.4402 18 12.7356 18 12c0-.7363-.1326-1.4416-.3753-2.0933l1.804-1.0415-1-1.732-1.8054 1.0423C15.7243 7.09 14.4503 6.3263 13 6.083zm-8.9235 7.028C4.026 12.748 4 12.377 4 12s.026-.748.0765-1.111L1.8407 9.598l3-5.196 2.2368 1.2913c.582-.455 1.2285-.831 1.9235-1.1122V2h6v2.582c.6946.2812 1.3408.6572 1.9224 1.112l2.238-1.292 3 5.196-2.2378 1.292c.0504.3628.0764.7333.0764 1.11 0 .3767-.026.7472-.0764 1.11l2.2377 1.292-3 5.196-2.238-1.292c-.5815.4548-1.2277.8308-1.9223 1.112V22h-6v-2.581c-.695-.2814-1.3416-.6574-1.9235-1.1123L4.8407 19.598l-3-5.196 2.2358-1.291zM12 16c-2.209 0-4-1.791-4-4s1.791-4 4-4 4 1.791 4 4-1.791 4-4 4zm0-2c1.1046 0 2-.8954 2-2s-.8954-2-2-2-2 .8954-2 2 .8954 2 2 2z"
            />
          </svg>
        </div>
      </button>
      <button
        className="css-1ekywde"
      >
        <div
          className="css-otejxm"
        >
          <svg
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 14.5c-1.1046 0-2-.8954-2-2s.8954-2 2-2 2 .8954 2 2-.8954 2-2 2zm12 0c-1.1046 0-2-.8954-2-2s.8954-2 2-2 2 .8954 2 2-.8954 2-2 2zm-6 0c-1.1046 0-2-.8954-2-2s.8954-2 2-2 2 .8954 2 2-.8954 2-2 2z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots fullOverlay element 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-17wxsht"
  >
    <div
      className="css-js3ti3"
    >
      <div
        className="css-1wgk747"
      />
      <div
        className="css-4nxbcy"
      >
        <span
          className="css-1fxa3fl"
          onBlur={[Function]}
          onFocus={[Function]}
        >
          Element
        </span>
      </div>
    </div>
    <div
      className="css-kxulf3"
    >
      <div
        className="css-1e23mlv"
      >
        Overlay This!
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots fullOverlay link 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-17wxsht"
  >
    <div
      className="css-js3ti3"
    >
      <div
        className="css-1wgk747"
      />
      <div
        className="css-4nxbcy"
      >
        <span
          className="css-1fxa3fl"
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <a
            href="http://google.com?query=overlay"
          >
            Click me
          </a>
        </span>
      </div>
    </div>
    <div
      className="css-kxulf3"
    >
      <div
        className="css-1e23mlv"
      >
        Overlay This!
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots fullOverlay linked icon 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-17wxsht"
  >
    <div
      className="css-js3ti3"
    >
      <div
        className="css-1wgk747"
      />
      <div
        className="css-4nxbcy"
      >
        <span
          className="css-1fxa3fl"
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <a
            href="http://google.com?query=overlay"
          >
            <div
              className="css-195ztb"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 2c5.52 0 10 4.48 10 10s-4.48 10-10 10S2 17.52 2 12 6.48 2 12 2zm0 18c4.41 0 8-3.59 8-8s-3.59-8-8-8-8 3.59-8 8 3.59 8 8 8zm-2-4V8l6 4-6 4z"
                />
              </svg>
            </div>
          </a>
        </span>
      </div>
    </div>
    <div
      className="css-kxulf3"
    >
      <div
        className="css-1e23mlv"
      >
        Overlay This!
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots fullOverlay linked icon with image link 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-17wxsht"
  >
    <div
      className="css-js3ti3"
    >
      <span
        className="css-15yq56v"
      >
        <a
          href="http://google.com?query=image"
        >
          <div
            className="css-1wgk747"
          />
        </a>
      </span>
      <div
        className="css-4nxbcy"
      >
        <span
          className="css-1fxa3fl"
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <a
            href="http://google.com?query=overlay"
          >
            <div
              className="css-195ztb"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 2c5.52 0 10 4.48 10 10s-4.48 10-10 10S2 17.52 2 12 6.48 2 12 2zm0 18c4.41 0 8-3.59 8-8s-3.59-8-8-8-8 3.59-8 8 3.59 8 8 8zm-2-4V8l6 4-6 4z"
                />
              </svg>
            </div>
          </a>
        </span>
      </div>
    </div>
    <div
      className="css-kxulf3"
    >
      <div
        className="css-1e23mlv"
      >
        Both Icon and Image Have Separate Click Targets
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots image link 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-17wxsht"
  >
    <div
      className="css-js3ti3"
    >
      <span
        className="css-15yq56v"
      >
        <a
          href="http://google.com?query=image"
        >
          <div
            className="css-1wgk747"
          />
        </a>
      </span>
    </div>
    <div
      className="css-kxulf3"
    >
      <div
        className="css-1e23mlv"
      >
        Linked Image
      </div>
      <div
        className="css-gmo5z6"
      >
        <span
          className="css-1tz10dh"
        >
          Jim Cooper
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots image no image 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-17wxsht"
  >
    <div
      className="css-1tiyrld"
    >
      <div
        className="css-1e23mlv"
      >
        No Image
      </div>
      <div
        className="css-gmo5z6"
      >
        <span
          className="css-1tz10dh"
        >
          Jim Cooper
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots image no image with overlay 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-17wxsht"
  >
    <div
      className="css-1tiyrld"
    >
      <div
        className="css-1e23mlv"
      >
        No Image, With Overlay (Not Shown)
      </div>
      <div
        className="css-gmo5z6"
      >
        <span
          className="css-1tz10dh"
        >
          Jim Cooper
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots image small image 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-17wxsht"
  >
    <div
      className="css-js3ti3"
    >
      <div
        className="css-1p9odnb"
      />
    </div>
    <div
      className="css-kxulf3"
    >
      <div
        className="css-1e23mlv"
      >
        Small Image
      </div>
      <div
        className="css-gmo5z6"
      >
        <span
          className="css-1tz10dh"
        >
          Jim Cooper
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots image tall image 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-17wxsht"
  >
    <div
      className="css-js3ti3"
    >
      <div
        className="css-ykssfz"
      />
    </div>
    <div
      className="css-kxulf3"
    >
      <div
        className="css-1e23mlv"
      >
        Tall Image
      </div>
      <div
        className="css-gmo5z6"
      >
        <span
          className="css-1tz10dh"
        >
          Jim Cooper
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots image wide image 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-17wxsht"
  >
    <div
      className="css-js3ti3"
    >
      <div
        className="css-40lz6d"
      />
    </div>
    <div
      className="css-kxulf3"
    >
      <div
        className="css-1e23mlv"
      >
        Wide Image
      </div>
      <div
        className="css-gmo5z6"
      >
        <span
          className="css-1tz10dh"
        >
          Jim Cooper
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots image with image 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-17wxsht"
  >
    <div
      className="css-js3ti3"
    >
      <div
        className="css-1wgk747"
      />
    </div>
    <div
      className="css-kxulf3"
    >
      <div
        className="css-1e23mlv"
      >
        With Image
      </div>
      <div
        className="css-gmo5z6"
      >
        <span
          className="css-1tz10dh"
        >
          Jim Cooper
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots image with image with overlay 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-17wxsht"
  >
    <div
      className="css-js3ti3"
    >
      <div
        className="css-1wgk747"
      />
      <div
        className="css-4nxbcy"
      >
        <span
          className="css-1fxa3fl"
          onBlur={[Function]}
          onFocus={[Function]}
        >
          Element
        </span>
      </div>
    </div>
    <div
      className="css-kxulf3"
    >
      <div
        className="css-1e23mlv"
      >
        With Image
      </div>
      <div
        className="css-gmo5z6"
      >
        <span
          className="css-1tz10dh"
        >
          Jim Cooper
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots in drawer medium 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div>
    <div
      className="css-58omaf"
      onClick={[Function]}
    >
      <div
        className="css-1lzobj4"
      >
        <div
          className="css-1g6ond4"
        >
          <div
            className="css-17wxsht"
          >
            <div
              className="css-js3ti3"
            >
              <div
                className="css-1wgk747"
              />
            </div>
            <div
              className="css-kxulf3"
            >
              <div
                className="css-1e23mlv"
              >
                Course thing you do
              </div>
              <div
                className="css-gmo5z6"
              >
                <span
                  className="css-1tz10dh"
                >
                  1m 46s
                </span>
              </div>
            </div>
            <div
              className="css-2c174p"
            >
              <button
                className="css-1ekywde"
              >
                <div
                  className="css-otejxm"
                >
                  <svg
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M6 14.5c-1.1046 0-2-.8954-2-2s.8954-2 2-2 2 .8954 2 2-.8954 2-2 2zm12 0c-1.1046 0-2-.8954-2-2s.8954-2 2-2 2 .8954 2 2-.8954 2-2 2zm-6 0c-1.1046 0-2-.8954-2-2s.8954-2 2-2 2 .8954 2 2-.8954 2-2 2z"
                    />
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="css-qs2rg7"
      >
        <button
          className="css-wepra9"
          onClick={[Function]}
        >
          <div
            className="css-1byjzqg"
          >
            <div
              className="css-otejxm"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      className="css-1i2htk9"
    >
      <div
        className="css-8nylan"
      >
        <div>
          some goodies in the drawer
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots in drawer small 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div>
    <div
      className="css-58omaf"
      onClick={[Function]}
    >
      <div
        className="css-1lzobj4"
      >
        <div
          className="css-1g6ond4"
        >
          <div
            className="css-17wxsht"
          >
            <div
              className="css-1tiyrld"
            >
              <div
                className="css-1umif8x"
              >
                Course thing you do
              </div>
              <div
                className="css-pi59ta"
              >
                <span
                  className="css-1tz10dh"
                >
                  1m 46s
                </span>
              </div>
            </div>
            <div
              className="css-2c174p"
            >
              <button
                className="css-1ekywde"
              >
                <div
                  className="css-otejxm"
                >
                  <svg
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M6 14.5c-1.1046 0-2-.8954-2-2s.8954-2 2-2 2 .8954 2 2-.8954 2-2 2zm12 0c-1.1046 0-2-.8954-2-2s.8954-2 2-2 2 .8954 2 2-.8954 2-2 2zm-6 0c-1.1046 0-2-.8954-2-2s.8954-2 2-2 2 .8954 2 2-.8954 2-2 2z"
                    />
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="css-qs2rg7"
      >
        <button
          className="css-wepra9"
          onClick={[Function]}
        >
          <div
            className="css-1byjzqg"
          >
            <div
              className="css-otejxm"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      className="css-1i2htk9"
    >
      <div
        className="css-8nylan"
      >
        <div>
          some goodies in the drawer
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots metadata link 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-17wxsht"
  >
    <div
      className="css-1tiyrld"
    >
      <div
        className="css-1e23mlv"
      >
        Meta With Links
      </div>
      <div
        className="css-gmo5z6"
      >
        <span
          className="css-1tz10dh"
        >
          <span
            className="css-1ublh7e"
          >
            <a
              href="http://google.com/?query=jaketrent"
            >
              Jake Trent
            </a>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots metadata long links 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-17wxsht"
  >
    <div
      className="css-1tiyrld"
    >
      <div
        className="css-1e23mlv"
      >
        Meta With Links
      </div>
      <div
        className="css-gmo5z6"
      >
        <span
          className="css-1tz10dh"
        >
          <span
            className="css-1ublh7e"
          >
            <a
              href="http://google.com/?query=jaketrent"
            >
              It is impossible to count the grand contributions of this great author
            </a>
          </span>
        </span>
        <span
          aria-hidden={true}
          className="css-kykfz1"
        >
          ·
        </span>
        <span
          className="css-1tz10dh"
        >
          <span
            className="css-1ublh7e"
          >
            <a
              href="http://google.com/?query=jaketrent"
            >
              Levels heretofore unknown in the battle for truth and knowledge
            </a>
          </span>
        </span>
        <span
          aria-hidden={true}
          className="css-kykfz1"
        >
          ·
        </span>
        <span
          className="css-1tz10dh"
        >
          <span
            className="css-1ublh7e"
          >
            <a
              href="http://google.com/?query=jaketrent"
            >
              A length of such amazing lengthitude so-as to blow the mind
            </a>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots metadata long strings 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-17wxsht"
  >
    <div
      className="css-1tiyrld"
    >
      <div
        className="css-1e23mlv"
      >
        The Longest Strings in El Mundo
      </div>
      <div
        className="css-gmo5z6"
      >
        <span
          className="css-1tz10dh"
        >
          It is impossible to count the grand contributions of this great author
        </span>
        <span
          aria-hidden={true}
          className="css-kykfz1"
        >
          ·
        </span>
        <span
          className="css-1tz10dh"
        >
          Levels heretofore unknown in the battle for truth and knowledge
        </span>
        <span
          aria-hidden={true}
          className="css-kykfz1"
        >
          ·
        </span>
        <span
          className="css-1tz10dh"
        >
          A length of such amazing lengthitude so-as to blow the mind
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots metadata long strings with image 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-17wxsht"
  >
    <div
      className="css-js3ti3"
    >
      <div
        className="css-1wgk747"
      />
    </div>
    <div
      className="css-kxulf3"
    >
      <div
        className="css-1e23mlv"
      >
        Long Strings AND Los Imagereo
      </div>
      <div
        className="css-gmo5z6"
      >
        <span
          className="css-1tz10dh"
        >
          It is impossible to count the grand contributions of this great author
        </span>
        <span
          aria-hidden={true}
          className="css-kykfz1"
        >
          ·
        </span>
        <span
          className="css-1tz10dh"
        >
          Levels heretofore unknown in the battle for truth and knowledge
        </span>
        <span
          aria-hidden={true}
          className="css-kykfz1"
        >
          ·
        </span>
        <span
          className="css-1tz10dh"
        >
          A length of such amazing lengthitude so-as to blow the mind
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots metadata string 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-17wxsht"
  >
    <div
      className="css-1tiyrld"
    >
      <div
        className="css-1e23mlv"
      >
        Meta with Strings
      </div>
      <div
        className="css-gmo5z6"
      >
        <span
          className="css-1tz10dh"
        >
          Jake Trent
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots metadata two lines 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-17wxsht"
  >
    <div
      className="css-1tiyrld"
    >
      <div
        className="css-1e23mlv"
      >
        Meta With Links
      </div>
      <div
        className="css-gmo5z6"
      >
        <span
          className="css-1tz10dh"
        >
          Jake Trent
        </span>
        <span
          aria-hidden={true}
          className="css-kykfz1"
        >
          ·
        </span>
        <span
          className="css-1tz10dh"
        >
          School of the Internet
        </span>
        <span
          aria-hidden={true}
          className="css-kykfz1"
        >
          ·
        </span>
        <span
          className="css-1tz10dh"
        >
          Blasted Good
        </span>
      </div>
      <div
        className="css-gmo5z6"
      >
        <span
          className="css-1tz10dh"
        >
          Certified GMO-free
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots progress 0 progress 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-17wxsht"
  >
    <div
      className="css-js3ti3"
    >
      <div
        className="css-1wgk747"
      />
    </div>
    <div
      className="css-kxulf3"
    >
      <div
        className="css-1e23mlv"
      >
        0 progress
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots progress 66.6667 progress 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-17wxsht"
  >
    <div
      className="css-js3ti3"
    >
      <div
        className="css-1wgk747"
      />
      <div
        className="css-268zju"
      >
        <div
          aria-label="67% complete"
          className="css-h2kagm"
        />
      </div>
    </div>
    <div
      className="css-kxulf3"
    >
      <div
        className="css-1e23mlv"
      >
        66.6667 progress
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots progress 100 progress 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-17wxsht"
  >
    <div
      className="css-js3ti3"
    >
      <div
        className="css-1wgk747"
      />
      <div
        className="css-268zju"
      >
        <div
          aria-label="100% complete"
          className="css-1qb9ko2"
        />
      </div>
    </div>
    <div
      className="css-kxulf3"
    >
      <div
        className="css-1e23mlv"
      >
        100 progress
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots progress no image 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-17wxsht"
  >
    <div
      className="css-1tiyrld"
    >
      <div
        className="css-1e23mlv"
      >
        No image, with progress (not shown)
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots size medium 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-17wxsht"
  >
    <div
      className="css-js3ti3"
    >
      <div
        className="css-1wgk747"
      />
    </div>
    <div
      className="css-kxulf3"
    >
      <div
        className="css-1e23mlv"
      >
        medium Row
      </div>
      <div
        className="css-gmo5z6"
      >
        <span
          className="css-1tz10dh"
        >
          Jim Cooper
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots size small 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-17wxsht"
  >
    <div
      className="css-1tiyrld"
    >
      <div
        className="css-1umif8x"
      >
        small Row
      </div>
      <div
        className="css-pi59ta"
      >
        <span
          className="css-1tz10dh"
        >
          Jim Cooper
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots title link 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-17wxsht"
  >
    <div
      className="css-1tiyrld"
    >
      <div
        className="css-1e23mlv"
      >
        <span
          className="css-1ublh7e"
        >
          <a
            href="http://google.com"
          >
            A Link Title
          </a>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots title medium long title 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-17wxsht"
  >
    <div
      className="css-js3ti3"
    >
      <div
        className="css-1wgk747"
      />
    </div>
    <div
      className="css-kxulf3"
    >
      <div
        className="css-1e23mlv"
      >
        medium With the Longest Title in the World Because It's Known That If You Give Room For This Kind of a Title, It Will Definitely Come to Pass 2000
      </div>
      <div
        className="css-gmo5z6"
      >
        <span
          className="css-1tz10dh"
        >
          Jim Cooper
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots title small long title 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-17wxsht"
  >
    <div
      className="css-1tiyrld"
    >
      <div
        className="css-1umif8x"
      >
        small With the Longest Title in the World Because It's Known That If You Give Room For This Kind of a Title, It Will Definitely Come to Pass 2000
      </div>
      <div
        className="css-pi59ta"
      >
        <span
          className="css-1tz10dh"
        >
          Jim Cooper
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots title string 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-17wxsht"
  >
    <div
      className="css-1tiyrld"
    >
      <div
        className="css-1e23mlv"
      >
        A String Title
      </div>
    </div>
  </div>
</div>
`;
